--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -292,6 +292,32 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia-with-naadam-festival' }) }}">A Classic Journey with Naadam Festival</a></p>
                 </td>
                 <td>
+                    <p>6<sup>th</sup> of July, 2015</p>
+                </td>
+                <td>
+                    <p>20<sup>th</sup> of July, 2015</p>
+                </td>
+                <td>
+                    <p>16 persons</p>
+                </td>
+                <td>
+                    <p>4 spaces left</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'a-classic-journey-of-mongolia-with-naadam-festival' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>2</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia-with-naadam-festival' }) }}">A Classic Journey with Naadam Festival</a></p>
+                </td>
+                <td>
                     <p>9<sup>th</sup> of July, 2015</p>
                 </td>
                 <td>
@@ -312,7 +338,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>2</p>
+                    <p>3</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia-with-naadam-festival' }) }}">A Classic Journey with Naadam Festival</a></p>
@@ -338,7 +364,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>3</p>
+                    <p>4</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'taste-of-mongolia' }) }}">Taste of Mongolia</a></p>
@@ -364,7 +390,7 @@
             </tr>            
             <tr>
                 <td>
-                    <p>4</p>
+                    <p>5</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">A Classic Journey of Mongolia</a></p>
@@ -390,7 +416,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>5</p>
+                    <p>6</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'taste-of-mongolia-with-naadam-festival' }) }}">Taste of Mongolia with Naadam Festival</a></p>
@@ -416,7 +442,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>6</p>
+                    <p>7</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'taste-of-mongolia-with-naadam-festival' }) }}">Taste of Mongolia with Naadam Festival</a></p>
@@ -442,7 +468,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>7</p>
+                    <p>8</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'jewels-of-mongolia' }) }}">Jewels of Mongolia</a></p>
@@ -468,7 +494,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>8</p>
+                    <p>9</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'treasures-of-mongolia' }) }}">Treasures of Mongolia</a></p>
@@ -494,7 +520,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>9</p>
+                    <p>10</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'luxury-tour-with-naadam-festival' }) }}">Luxury tour with Naadam Festival</a></p>
@@ -520,7 +546,7 @@
             </tr>
             <tr>
                 <td>
-                    <p>10</p>
+                    <p>11</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'unparalleled-luxury-tour' }) }}">Unparalleled Luxury Tour</a></p>
@@ -879,6 +905,32 @@
             <tr>
                 <td>
                     <p>4</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">A Classic Journey of Mongolia</a></p>
+                </td>
+                <td>
+                    <p>6<sup>th</sup> of September, 2015</p>
+                </td>
+                <td>
+                    <p>19<sup>th</sup> of September, 2015</p>
+                </td>
+                <td>
+                    <p>16 persons</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'a-classic-journey-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>5</p>
                 </td>
                 <td>
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'eagle-festival-and-gobi-desert' }) }}">Eagle Festival & Gobi Desert</a></p>
