--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -552,10 +552,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'unparalleled-luxury-tour' }) }}">Unparalleled Luxury Tour</a></p>
                 </td>
                 <td>
-                    <p>20<sup>th</sup> of July, 2015</p>
+                    <p>21<sup>th</sup> of July, 2015</p>
                 </td>
                 <td>
-                    <p>29<sup>th</sup> of July, 2015</p>
+                    <p>30<sup>th</sup> of July, 2015</p>
                 </td>
                 <td>
                     <p>8 - 12 persons</p>
@@ -614,10 +614,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">A Classic Journey of Mongolia</a></p>
                 </td>
                 <td>
-                    <p>25<sup>th</sup> of July, 2015</p>
+                    <p>24<sup>th</sup> of July, 2015</p>
                 </td>
                 <td>
-                    <p>7<sup>th</sup> of August, 2015</p>
+                    <p>6<sup>th</sup> of August, 2015</p>
                 </td>
                 <td>
                     <p>16 persons</p>
@@ -640,10 +640,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">A Classic Journey of Mongolia</a></p>
                 </td>
                 <td>
-                    <p>2<sup>nd</sup> of August, 2015</p>
+                    <p>3<sup>rd</sup> of August, 2015</p>
                 </td>
                 <td>
-                    <p>15<sup>th</sup> of August, 2015</p>
+                    <p>16<sup>th</sup> of August, 2015</p>
                 </td>
                 <td>
                     <p>16 persons</p>
@@ -666,10 +666,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">A Classic Journey of Mongolia</a></p>
                 </td>
                 <td>
-                    <p>15<sup>th</sup> of August, 2015</p>
+                    <p>10<sup>th</sup> of August, 2015</p>
                 </td>
                 <td>
-                    <p>28<sup>th</sup> of August, 2015</p>
+                    <p>23<sup>th</sup> of August, 2015</p>
                 </td>
                 <td>
                     <p>16 persons</p>
@@ -692,10 +692,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">A Classic Journey of Mongolia</a></p>
                 </td>
                 <td>
-                    <p>16<sup>th</sup> of August, 2015</p>
+                    <p>14<sup>th</sup> of August, 2015</p>
                 </td>
                 <td>
-                    <p>29<sup>th</sup> of August, 2015</p>
+                    <p>27<sup>th</sup> of August, 2015</p>
                 </td>
                 <td>
                     <p>16 persons</p>
@@ -718,10 +718,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">A Classic Journey of Mongolia</a></p>
                 </td>
                 <td>
-                    <p>10<sup>th</sup> of August, 2015</p>
+                    <p>17<sup>th</sup> of August, 2015</p>
                 </td>
                 <td>
-                    <p>23<sup>th</sup> of August, 2015</p>
+                    <p>30<sup>th</sup> of August, 2015</p>
                 </td>
                 <td>
                     <p>16 persons</p>
@@ -858,10 +858,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">A Classic Journey of Mongolia</a></p>
                 </td>
                 <td>
-                    <p>10<sup>th</sup> of September, 2015</p>
+                    <p>1<sup>st</sup> of September, 2015</p>
                 </td>
                 <td>
-                    <p>23<sup>th</sup> of September, 2015</p>
+                    <p>14<sup>th</sup> of September, 2015</p>
                 </td>
                 <td>
                     <p>16 persons</p>
@@ -875,7 +875,7 @@
                 <td>
                     <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'a-classic-journey-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
                 </td>
-            </tr>            
+            </tr>
             <tr>
                 <td>
                     <p>3</p>
@@ -884,10 +884,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">A Classic Journey of Mongolia</a></p>
                 </td>
                 <td>
-                    <p>1<sup>st</sup> of September, 2015</p>
+                    <p>6<sup>th</sup> of September, 2015</p>
                 </td>
                 <td>
-                    <p>14<sup>th</sup> of September, 2015</p>
+                    <p>19<sup>th</sup> of September, 2015</p>
                 </td>
                 <td>
                     <p>16 persons</p>
@@ -910,10 +910,10 @@
                     <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'a-classic-journey-of-mongolia' }) }}">A Classic Journey of Mongolia</a></p>
                 </td>
                 <td>
-                    <p>6<sup>th</sup> of September, 2015</p>
+                    <p>11<sup>th</sup> of September, 2015</p>
                 </td>
                 <td>
-                    <p>19<sup>th</sup> of September, 2015</p>
+                    <p>24<sup>th</sup> of September, 2015</p>
                 </td>
                 <td>
                     <p>16 persons</p>
