--- a/resources/views/Page/request_airfare_quote.html.twig
+++ b/resources/views/Page/request_airfare_quote.html.twig
@@ -31,7 +31,7 @@
                 <h2>REQUEST AIRFARE QUOTE</h2>
 
                 <div class="box_content clearfix">
-                    <form method="post" action="{{ path('booking_send') }}">
+                    <form method="post" action="{{ path('request_airfare_quote_send') }}">
 
                         {{ form_errors(form) }}
 
