--- a/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
@@ -240,6 +240,7 @@
                         <br/>#}
                         <b style="color: #B28E1B">Single supplement:</b> <span>$680</span>
                         <br/>
+                        We have a single man willing to share a room with another single man
                     </div>
                     <!--/ widget_categories -->
 
