--- a/resources/views/Tour/treasures_of_mongolia.html.twig
+++ b/resources/views/Tour/treasures_of_mongolia.html.twig
@@ -196,8 +196,8 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>$2995</span>
                         <br/>
-                        {#<span style="font-weight: bold; color: brown">Save $200 BOOK by Dec 31, 2014</span>
-                        <br/>#}
+                        <span style="font-weight: bold; color: brown">$300 OFF</span>
+                        <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>$500</span>
                         <br/>
                     </div>
