--- a/resources/views/Tour/taste-of-mongolia.html.twig
+++ b/resources/views/Tour/taste-of-mongolia.html.twig
@@ -208,8 +208,8 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>$2895</span>
                         <br/>
-                        {#<span style="font-weight: bold; color: brown">Save $200 BOOK by Dec 31, 2014</span>
-                        <br/>#}
+                        <span style="font-weight: bold; color: brown">$300 OFF</span>
+                        <br/>
                         <b style="color: #B28E1B">Single supplement:</b> <span>$490</span>
                         <br/>
                     </div>
