--- a/web/style.css
+++ b/web/style.css
@@ -2592,6 +2592,7 @@ h3.toggle.box {
 	display:none}
 
 .sb .box_content {
+    font-family: sans-serif;
 	padding:15px;
 	background:#fff;
 	color:#595959;
@@ -3036,7 +3037,7 @@ h3.toggle.box {
 .info_row {
 	border-bottom:1px solid #e9e9e9;
 	line-height:22px;
-	color:#8e959b;
+	color: #19191c;
 	font-size:10px;
 	text-align:right;
 	position:relative;}
@@ -5054,7 +5055,7 @@ input.btn-submit,
 	margin:14px 0;}
 
 .offer_descr {
-	 color:#80868c;
+	 color: #202226;
 	 font-size:13px;
 	 line-height:1.6em;
 	 padding:15px 0;}
