--- a/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/a-classic-journey-of-mongolia-with-naadam-festival.html.twig
@@ -230,7 +230,7 @@
                         <h3 class="widget-title">Trip snapshot</h3>
                         <b style="color: #B28E1B">Tour length:</b> <span>{{ tour.duration2 }}</span>
                         <br/>
-                        <b style="color: #B28E1B">Available time:</b> <span>{{ tour.availableTime }}</span>
+                        <b style="color: #B28E1B">Available time:</b> <span>{{ tour.availableTime|raw }}</span>
                         <br/>
                         <b style="color: #B28E1B">Region:</b> <span>{{ tour.region }}</span>
                         <br/>
