--- a/resources/views/Page/_contact_information.html.twig
+++ b/resources/views/Page/_contact_information.html.twig
@@ -25,7 +25,7 @@
 <br/>
 <div class="contact-info">
     <div class="titleHeader clearfix">
-        <h3>Office in United States</h3>
+        <h3>Address in United States</h3>
     </div><!--end titleHeader-->
 
     <address>
