--- a/resources/views/Page/_request_airfare_quote.html.twig
+++ b/resources/views/Page/_request_airfare_quote.html.twig
@@ -4,4 +4,6 @@ City you would like to depart from?: {{ form.city }}
 Phone number: {{ form.phone }}
 Email: {{ form.email }}
 Tour: {{ form.tour }}
+Arrival date: {{ form.arrival_date }}
+Departure date: {{ form.departure_date }}
 Comment: {{ form.comment }}
