--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -170,7 +170,7 @@
                         E-Mail: info@travelallmongolia.com<br>
                         {#Skype: soyoloo_mongolianluxurytours#}
                     </div>
-                    <h3 style="margin-top: 10px">OFFICE IN UNITED STATES:</h3>
+                    <h3 style="margin-top: 10px">ADDRESS IN UNITED STATES:</h3>
                     <div class="address">
                         5201 Diamond Drive, <br/>
                         Sebring Florida, FL 33875
