--- a/resources/views/Page/request_airfare_quote.html.twig
+++ b/resources/views/Page/request_airfare_quote.html.twig
@@ -54,6 +54,11 @@
                                 {{ form_errors(form.city) }}
                             </div>
                             <div class="row alignleft field_text">
+                                {{ form_label(form.arrival_date) }}
+                                {{ form_widget(form.arrival_date, { 'attr': {'class': 'inputField required'} }) }}
+                                {{ form_errors(form.arrival_date) }}
+                            </div>
+                            <div class="row alignleft field_text">
                                 {{ form_label(form.email) }}
                                 {{ form_widget(form.email, { 'attr': {'class': 'inputField required'} }) }}
                                 {{ form_errors(form.email) }}
@@ -70,6 +75,11 @@
                                 {{ form_label(form.phone) }}
                                 {{ form_widget(form.phone, { 'attr': {'class': 'inputField required'} }) }}
                                 {{ form_errors(form.phone) }}
+                            </div>
+                            <div class="row alignleft field_text">
+                                {{ form_label(form.departure_date) }}
+                                {{ form_widget(form.departure_date, { 'attr': {'class': 'inputField required'} }) }}
+                                {{ form_errors(form.departure_date) }}
                             </div>
                         </div>
 
