--- a/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
+++ b/resources/views/Tour/taste-of-mongolia-with-naadam-festival.html.twig
@@ -223,6 +223,8 @@
                         <br/>#}
                         <b style="color: #B28E1B">Single supplement:</b> <span>$550</span>
                         <br/>
+                        <span>We have a single man willing to share a room with another single man</span>
+                        <br/>
                     </div>
                     <!--/ widget_categories -->
 
