--- a/resources/views/_carousel.html.twig
+++ b/resources/views/_carousel.html.twig
@@ -1,4 +1,3 @@
-
 <!-- header -->
 <div class="header" style="background:#000">
 
@@ -8,7 +7,11 @@
             <ul>
                 {% for slide in slides %}
                 <li data-transition="fade" data-slotamount="1" data-masterspeed="500">
+                    
                     <img src="{{ slide.src is defined ? slide.src : slide }}" data-fullwidthcentering="on">
+                    <div class="caption sfl white_text big_title" data-x="0" data-y="0" data-speed="100" data-start="100" data-easing="easeOutExpo" style="width:100%;height:100%;display:block;">
+                        <a href="{{ slide.link }}" style="width:100%;height:100%;display:block;">&nbsp;</a>
+                    </div>
                     {% if slide.alt is defined or slide.caption is defined %}
                     <div class="caption sft text_line" data-x="10" data-y="190" data-speed="900" data-start="800" data-easing="easeOutExpo"></div>
                     <div class="caption sfb text_line" data-x="10" data-y="300" data-speed="900" data-start="800" data-easing="easeOutExpo"></div>
