--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -198,6 +198,37 @@
     </div>
 </div><!--end wrapper-->
 
+<!-- Google Code for Remarketing Tag -->
+<!--------------------------------------------------
+Remarketing tags may not be associated with personally identifiable 
+information or placed on pages related to sensitive categories. See more 
+information and instructions on how to setup the tag on: 
+http://google.com/ads/remarketingsetup
+--------------------------------------------------->
+<script type="text/javascript">
+var google_tag_params = {
+        travel_destid: "TAM123A",
+        flight_pagetype: "home",
+        flight_totalvalue:  2350.00
+};
+</script>
+<script type="text/javascript">
+/* <![CDATA[ */
+var google_conversion_id = 973048679;
+var google_custom_params = window.google_tag_params;
+var google_remarketing_only = true;
+/* ]]> */
+</script>
+<script type="text/javascript" 
+src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+<div style="display:inline;">
+<img height="1" width="1" style="border-style:none;" alt="" 
+src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/973048679/?value=0&amp;guid=ON&amp;script=0"/>
+</div>
+</noscript>
+
 </body>
 
 </html>
