--- a/resources/views/Page/_contact_information.html.twig
+++ b/resources/views/Page/_contact_information.html.twig
@@ -23,6 +23,7 @@
 
 </div>
 <br/>
+{#
 <div class="contact-info">
     <div class="titleHeader clearfix">
         <h3>Address in United States</h3>
@@ -38,4 +39,4 @@
         Sebring Florida, FL 33875
     </address>
 
-</div><!--end contact-info-->
+</div><!--end contact-info-->#}
