--- a/resources/views/layout.html.twig
+++ b/resources/views/layout.html.twig
@@ -170,11 +170,11 @@
                         E-Mail: info@travelallmongolia.com<br>
                         {#Skype: soyoloo_mongolianluxurytours#}
                     </div>
-                    <h3 style="margin-top: 10px">ADDRESS IN UNITED STATES:</h3>
+                    {#<h3 style="margin-top: 10px">ADDRESS IN UNITED STATES:</h3>
                     <div class="address">
                         5201 Diamond Drive, <br/>
                         Sebring Florida, FL 33875
-                    </div>
+                    </div>#}
                     <a href="{{ path('contact') }}" class="notice">Send us message</a>
                 </div>
             </div>
