--- a/resources/views/Tour/gobi_and_beyond.html.twig
+++ b/resources/views/Tour/gobi_and_beyond.html.twig
@@ -223,7 +223,7 @@
 
                     <!-- subscribe buttons -->
                     <div class="widget-container subscribe_btn">
-                        <mark style="padding: 10px;display: block;">OFFER 10% May sale discount</mark>
+                        {#<mark style="padding: 10px;display: block;">OFFER 10% May sale discount</mark>#}
                         <br/>
                         <div>
                             <a href="{{ path('page_show', {'slug':'trip-calendar-2016'}) }}"><img src="/images/group_travel_2014.jpg" alt="Join our group travel 2014"/></a>
