--- a/resources/views/Tour/show.html.twig
+++ b/resources/views/Tour/show.html.twig
@@ -63,7 +63,7 @@
                                 </div>
                             </div>
                         </div>
-                        <mark style="padding: 10px;display: block;">OFFER 10% February sale discount</mark>
+                        {#<mark style="padding: 10px;display: block;">OFFER 10% February sale discount</mark>#}
 
                         {# buttons #}
                         <a class="btn btn_default" href="{{ path('booking') }}"><span>BOOK TRIP</span></a>
