--- a/resources/views/Content/testimonials.html
+++ b/resources/views/Content/testimonials.html
@@ -1,6 +1,24 @@
 
 <div class="frame_quote"><blockquote>
     <p>
+        <em>Travel All Mongolia put on an excellent tour, well organized with
+            comfortable vehicles, functional & comfortable Ger camps, and a very
+            knowledgeable and personable guide whose love for her country shows.  We
+            were well taken care of from the time we landed in UB until we departed
+            UB. The itinerary brought us to numerous major landmarks in less than
+            two weeks, although the fast pace did require significant travel time
+            each day.  We truly enjoyed the Gobi, your beautiful & majestic national
+            parks, eating local food, learning about your country’s religion,
+            history and culture, meeting local nomadic families and learning about
+            their way of life.  I highly recommend experiencing Mongolia through
+            "Travel All Mongolia".</em></p>
+    <p>
+        <span style="color:#8b4513;"><strong>Esther Thavikulwat from USA</strong></span></p>
+</blockquote>
+</div>
+
+<div class="frame_quote"><blockquote>
+    <p>
         <em>I’ve been meaning to write to you and thank you for the wonderful trip to your magnificent country.  Every time we turned a corner there was something new and different to experience.  Serjee was a wonderful guide, we enjoyed very much being with her.  She obviously loves Mongolia and was willing to share so much of herself (and her family) with us.  Visiting with her parents in their home was certainly a highlight.  The drivers were the best.  We all felt very safe with them thru the mountains, rivers, whatever.  They participated in activities with us.  And even though they didn’t speak English we all communicated.  Everything else was great.  This was one of the best trips I have ever taken.  Thank you for offering it to us so we could see your wonderful country first hand.</em></p>
     <p>
         <span style="color:#8b4513;"><strong>Sandra Bremer, USA</strong></span></p>
