removed OFF discount

--- a/resources/views/Tour/a-classic-journey-of-mongolia.html.twig
+++ b/resources/views/Tour/a-classic-journey-of-mongolia.html.twig
@@ -240,8 +240,8 @@
                         <br/>
                         <b style="color: #B28E1B">Price:</b> <span>$3345</span>
                         <br/>
-                        <span style="font-weight: bold; color: brown">$500 OFF by March 31</span>
-                        <br/>
+                        {#<span style="font-weight: bold; color: brown">$500 OFF by March 31</span>
+                        <br/>#}
                         <b style="color: #B28E1B">Single supplement:</b> <span>$590</span>
                         <br/>
                     </div>
