--- a/resources/views/Content/trip_calendar.html
+++ b/resources/views/Content/trip_calendar.html
@@ -269,6 +269,35 @@
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <p>5</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'taste-of-mongolia' }) }}">Taste of Mongolia</a></p>
+                </td>
+                <td>
+                    <p>12<sup>th</sup> of June, 2016</p>
+                </td>
+                <td>
+                    <p>21<sup>th</sup> of June, 2016</p>
+                </td>
+                <td>
+                    <p>Min - 2, Max - 18</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'taste-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
             </tbody>
         </table>
 </div>
@@ -406,7 +435,7 @@
                     <p>29<sup>th</sup> of July, 2016</p>
                 </td>
                 <td>
-                    <p>16 persons</p>
+                    <p>Min - 2, Max - 18</p>
                 </td>
                 <td>
                     <p>Available</p>
@@ -863,6 +892,64 @@
                     <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <p>8</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'taste-of-mongolia' }) }}">Taste of Mongolia</a></p>
+                </td>
+                <td>
+                    <p>5<sup>th</sup> of August, 2016</p>
+                </td>
+                <td>
+                    <p>14<sup>th</sup> of August, 2016</p>
+                </td>
+                <td>
+                    <p>Min - 2, Max - 18</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'taste-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>9</p>
+                </td>
+                <td>
+                    <p><a style="color: #000000" href="{{ path('tour_show', { 'slug' : 'taste-of-mongolia' }) }}">Taste of Mongolia</a></p>
+                </td>
+                <td>
+                    <p>15<sup>th</sup> of August, 2016</p>
+                </td>
+                <td>
+                    <p>24<sup>th</sup> of August, 2016</p>
+                </td>
+                <td>
+                    <p>Min - 2, Max - 18</p>
+                </td>
+                <td>
+                    <p>Available</p>
+                </td>
+                <td>
+                    <p><a class="btn btn_blue" href="/booking/form"><span>Book trip</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('download_pdf', { 'slug' : 'taste-of-mongolia' }) }}" title="Download detailed itinerary"><span>Download detailed itinerary</span></a></p>
+                </td>
+                <td>
+                    <p><a style="font-size: 16px;" href="{{ path('request_airfare_quote') }}" title="Request Airfare Quote"><span>Request Airfare Quote</span></a></p>
+                </td>
+            </tr>
             </tbody>
         </table>
 </div>
@@ -913,7 +1000,7 @@
                     <p>10<sup>th</sup> of September, 2016</p>
                 </td>
                 <td>
-                    <p>16 persons</p>
+                    <p>Min-2, Max-18</p>
                 </td>
                 <td>
                     <p>Available</p>
